--- a/orig/team-apps.yaml
+++ b/orig/team-apps.yaml
@@ -9,7 +9,7 @@ spec:
   project: production
   source:
     path: team-a-apps
-    repoURL: https://github.com/[...]/crossplane-kubevela-argocd-demo
+    repoURL: https://github.com/cfeddersen/crossplane-kubevela-argocd-demo
     targetRevision: HEAD
   destination:
     server: team-a
