--- a/production/sealed-secrets.yaml
+++ b/production/sealed-secrets.yaml
@@ -9,7 +9,7 @@ spec:
   project: production
   source:
     path: sealed-secrets
-    repoURL: https://github.com/[...]/crossplane-kubevela-argocd-demo
+    repoURL: https://github.com/cfeddersen/crossplane-kubevela-argocd-demo
     targetRevision: HEAD
   destination:
     server: https://kubernetes.default.svc
