--- a/production/team-a-infra.yaml
+++ b/production/team-a-infra.yaml
@@ -9,7 +9,7 @@ spec:
   project: production
   source:
     path: team-a-infra
-    repoURL: https://github.com/[...]/crossplane-kubevela-argocd-demo
+    repoURL: https://github.com/cfeddersen/crossplane-kubevela-argocd-demo
     targetRevision: HEAD
   destination:
     server: https://kubernetes.default.svc
